tcpip-ace-demo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcpip-ace-demo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: tcpip-ace-demo
  template:
    metadata:
      labels:
        app: tcpip-ace-demo
    spec:
      containers:
      - image: >-
          image-placeholder
        name: tcpip-ace-demo
        ports:
        - containerPort: 7800
        - containerPort: 12345
