tcpip-ace-demo/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tcpip-ace-demo-route
spec:
  to:
    kind: Service
    name: tcpip-ace-demo
    weight: 100
  port:
    targetPort: 7800
  wildcardPolicy: None
